- Se implementarion nuevos modelos y rutas para el sitio.
- Se corrigió un problema de conexión entre "web" y "db"
- Se crearon nuevos modelos para la mayoría de las rutas principales

--- a/fireborn/apps/products/templates/Products.html
+++ b/fireborn/apps/products/templates/Products.html
@@ -3,14 +3,13 @@
 {% load static %}
 
 {% block title %}
-Artículos
+Tienda
 
 {% endblock title %}
 {% block content %}
 
-{% block header %}
-    {% include 'header.html' %}
 
-{% endblock header %}
-
+<h1 class="display-1 ">
+    Tienda
+</h1>
 {% endblock content %}
