--- a/fireborn/templates/base.html
+++ b/fireborn/templates/base.html
@@ -23,15 +23,21 @@
   <link rel="stylesheet" href="{% static '/js/OwlCarousel2/dist/assets/owl.carousel.min.css' %}">
   <link rel="stylesheet" href="{% static '/js/OwlCarousel2/dist/assets/owl.theme.default.min.css' %}">
 
-  <!--google-->
-  <!--fonts-->
-  <!-- TODO MAKE THIS FONTS STATICS-->
-
-  <!--icons-->
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+ <!-- Font Awesome -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
+rel="stylesheet"
+/>
 
   <title>{% block title %}{% endblock title %} | Arturo Sáenz</title>
 </head>
@@ -48,13 +54,9 @@
       {% endblock navbar %}
     </div>
     <div class="row d-flex justify-content-center">
-      <div class="col-10">
 
-            {% block content %}
-            {% endblock content %}
-
-      </div>
-
+      {% block content %}
+      {% endblock content %}
 
     </div>
   </div>
@@ -65,6 +67,11 @@
   {% bootstrap_javascript %}
   <script src="{% static 'js/jquery-3.6.1.min.js' %}""></script>
     <script src=" {% static 'js/OwlCarousel2/dist/owl.carousel.min.js' %}"></script>
+    <!-- MDB -->
+<script
+type="text/javascript"
+src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
+></script>
   <!--<script src="{% static 'js/script.js' %}" type="text/javascript"></script>  -->
 </body>
 
